Align button text correctly at smaller sizes #67

--- a/app/templates/app/app.pcss
+++ b/app/templates/app/app.pcss
@@ -24,6 +24,10 @@ main {
   border-top: 10px solid #005ea5;
 }
 
+.gv-c-button {
+  text-align: center;
+}
+
 @media (max-width: 500px) {
   th {
     display: none;
